<resources>
    <string name="app_name">XKCD Comic App</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="searchBar_hint_text">Search</string>
    <string name="title_activity_dependency">Dependency</string>
    <string name="title_ID">ID:</string>
    <string name="title_Date">Date:</string>
    <string name="title_Transcript">Alt:</string>

    <string name="favorise_icon_content_description">star_icon</string>
    <string name="search_bar_placeholder">Search</string>

    <string name="invalid_search">Invalid input.\nPlease enter an id or keyword to search for.</string>
    <string name="no_entries_search">No entries found.</string>
</resources>
