...
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="2dp">

            <!-- input text field -->
            <EditText
                android:id="@+id/search_bar_text_field"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/searchBar_hint_text"
                android:inputType="textPersonName"
                android:shadowColor="@color/colorSecondaryDark"
                android:autofillHints="@string/search_bar_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_bar_search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- search button -->
            <Button
                android:id="@+id/search_bar_search_button"
...
